@@ -223,6 +223,9 @@ Release 2.8.0 - UNRELEASED
     HADOOP-12258. Need translate java.nio.file.NoSuchFileException to
     FileNotFoundException to avoid regression. (Zhihai Xu via cnauroth)
 
+    HADOOP-12689. S3 filesystem operations stopped working correctly
+    (Matt Paduano via raviprak)
+
 Release 2.7.2 - UNRELEASED
 
   INCOMPATIBLE CHANGES
